syntax = "proto3";

package calculator;

option go_package="calculatorpb";

message SumRequest {
  int64 first_number=1;
  int64 second_number=2;
}

message SumResponse{
  int64 sum_result=1;
}

message PrimeNumberDecompositionRequest {
  int64 number=1;
}

message PrimeNumberDecompositionResponse {
  int64 result=1;
}
service CalculatorService{
  //Unary API
  rpc Sum(SumRequest) returns (SumResponse){};
  //Server streaming API
  rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse){};
}